Next changes for data model

--- a/XSLTViz/Web.config
+++ b/XSLTViz/Web.config
@@ -44,7 +44,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="DataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=XSLTViz;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+	
+	<connectionStrings>
+		<add name="DataContext"
+				providerName="System.Data.SqlClient"
+				connectionString="Server=.\SQLEXPRESS;Database=XSLTViz;Integrated Security=True;"/>
+	</connectionStrings>
+	
 </configuration>
