Start parsing entities

--- a/XSLTViz/Web.config
+++ b/XSLTViz/Web.config
@@ -50,5 +50,9 @@
 				providerName="System.Data.SqlClient"
 				connectionString="Server=.\SQLEXPRESS;Database=XSLTViz;Integrated Security=True;"/>
 	</connectionStrings>
+
+	<appSettings>
+		<add key="filesLocation" value="E:\DEV\Sources\GIT\Meridian\AMM\Code\Client\WebClient\XSL" />
+	</appSettings>
 	
 </configuration>
