Added minor changes.

--- a/XSLTViz/Web.config
+++ b/XSLTViz/Web.config
@@ -52,7 +52,7 @@
 	</connectionStrings>
 
 	<appSettings>
-		<add key="filesLocation" value="E:\DEV\Sources\GIT\Meridian\AMM\Code\Client\WebClient\XSL" />
+		<add key="filesLocation" value="D:\DEV\DevDays 2018\XSL" />
 	</appSettings>
 	
 </configuration>
