Next part of changes.

--- a/XSLTViz/Web.config
+++ b/XSLTViz/Web.config
@@ -36,6 +36,10 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -46,13 +50,18 @@
   </entityFramework>
 	
 	<connectionStrings>
-		<add name="DataContext"
-				providerName="System.Data.SqlClient"
-				connectionString="Server=.\SQLEXPRESS;Database=XSLTViz;Integrated Security=True;"/>
+		<add name="DataContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=XSLTViz;Integrated Security=True;" />
 	</connectionStrings>
 
 	<appSettings>
-		<add key="filesLocation" value="D:\DEV\DevDays 2018\XSL" />
+		<add key="filesLocation" value="E:\DEV\Sources\GIT\Meridian\AMM\Code\Client\WebClient\XSL" />
 	</appSettings>
 	
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
