--- a/XSLTViz/Web.config
+++ b/XSLTViz/Web.config
@@ -62,7 +62,8 @@
 	</connectionStrings>
 
 	<appSettings>
-		<add key="filesLocation" value="E:\DEV\Sources\GIT\Meridian\AMM\Code\Client\WebClient\XSL" />
+		<add key="filesLocation" value="D:\DEV\DevDays 2018\XSL" />
+		<!--<add key="filesLocation" value="E:\DEV\Sources\GIT\Meridian\AMM\Code\Client\WebClient\XSL" />-->
 	</appSettings>
 	
 <system.webServer>
