--- a/XSLTViz/XSLTViz.csproj
+++ b/XSLTViz/XSLTViz.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>XSLTViz</RootNamespace>
     <AssemblyName>XSLTViz</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -157,6 +157,8 @@
     <Compile Include="DataModel\Settings.cs" />
     <Compile Include="DataModel\Template.cs" />
     <Compile Include="DataModel\File.cs" />
+    <Compile Include="DataModel\TemplateCall.cs" />
+    <Compile Include="DataModel\TemplatesRelation.cs" />
     <Compile Include="DataModel\TestDBInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
